TEST_PROGRAMS/VALID/08/shortDec.go
package main;
func main(){
    x := 6;
    y, z := 2, 3.2;
}
