TEST_PROGRAMS/INVALID/08/badNumberofIds.go
package main;

func main() {
  var i, j, k = 2, 3;

}
